<resources>

    <!---Nome do app-->

    <string name="app_name">TaskSaveAppTest</string>

    <!---Strings activity_welcome-->
    <string name="welcome_entrar_button">Entrar</string>
    <string name="welcome_cadastrar_button">Cadastrar</string>

    <!---Strings activity_cadastro-->
    <string name="text_view_cadastro">Faça o cadastro para continuar</string>
    <string name="edit_text_hint_usuario">Nome Completo</string>
    <string name="edit_text_hint_email">E-mail</string>
    <string name="edit_text_hint_senha">Senha</string>
    <string name="edit_text_hint_senha2">Repetir Senha</string>
    <string name="text_view_senha_forte">* A senha deve ter no minímo 6 caracteres</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="text_view_login_cadastro">Já tenho uma conta</string>

    <!---Strings activity_login-->
    <string name="text_view_login_login">Faça o login para continuar no app:</string>
    <string name="edit_text_hint_email_login">Email</string>
    <string name="edit_text_hint_senha_login">Senha</string>
    <string name="checkbox_lembrar">Lembrar meu acesso</string>
    <string name="text_view_esquecer_senha">Esqueci minha senha</string>
    <string name="button_continuar_login">Continuar</string>
    <string name="button_cadastrar_login">Criar uma conta</string>

    <!---Strings activity_fingerprint-->

    <string name="text_view_fingerprint">Autenticar FingerPrint</string>
    <string name="button_fing">Tentar usando outro método</string>
    <string name="button_fing2">Entrar com Impressão Digital</string>

    <!---Strings activity_login-->

    <string name="edit_nome">Usuário</string>
    <string name="edit_text">Entrar</string>
    <string name="text_view_login">Login</string>
    <string name="edit_senha">Senha</string>

    <!---Strings activity_main-->

    <string name="text_view">Olá, Usuário</string>
    <string name="text_view_agenda">Agenda</string>
    <string name="text_view_calendar">Datas</string>
    <string name="text_view_senha">Senhas</string>
    <string name="text_view_documento">Docs</string>
    <string name="text_view_config">Config.</string>
    <string name="text_view_sair">Sair</string>

    <!---Strings activity_agenda-->
    <string name="text_view_tarefas">Tarefas</string>

    <!---Strings activity_add_agenda-->
    <string name="text_view_add_agenda">Criar nova tarefa:</string>
    <string name="edit_text_descricao_add_agenda">Descrição</string>
    <string name="button_salvar_agenda">Salvar</string>
    <string name="edit_text_nome_add_agenda">Insira uma nova tarefa</string>
    <string name="channel_name">NotificaçãoAgenda</string>
    <string name="channel_description">Descrição</string>
    <string name="switch_button">Definir lembrete</string>
    <string name="text_view_horario">Horário</string>
    <string name="text_view_data">Data</string>
    <string name="text_view_contador_descricao">0/20</string>
    <string name="text_view_repetir">Não repetir</string>
    <string name="text_view_contador_titulo">0/14</string>

    <!---Strings activity_agenda_concluido-->
    <string name="text_view_concluido">Tarefas concluídas</string>

    <!---Strings dialog_fingerprint-->
    <string name="text_view_dialog_fingerprint">Deseja ativar o acesso por biometria?</string>
    <string name="button_ativar">Ativar</string>
    <string name="button_nao">Não Ativar</string>

    <!---Strings dialog_repeat_reminder-->
    <string name="text_view_nao_repetir">Não repetir</string>
    <string name="text_view_dia">Todo dia</string>
    <string name="text_view_semana">Toda semana</string>
    <string name="text_view_mes">Todo mês</string>
    <string name="text_view_ano">Todo ano</string>

    <!---Strings dialog_theme-->
    <string name="text_view_theme_automatico">Automático</string>
    <string name="text_view_theme_light">Claro</string>
    <string name="text_view_theme_dark">Escuro</string>

    <!---Strings activity_config-->
    <string name="text_view_config_act">Configurações</string>

    <!---Strings layout_agenda_concluido-->
    <string name="text_view_titulo">Teste de Título</string>
    <string name="text_view_desc">Descricao</string>
    <string name="text_view_hor">teste</string>

    <!---Strings activity_item_selected_agenda-->
    <string name="button_excluir">Excluir</string>
    <string name="button_att">Atualizar</string>
    <string name="checkbox_conc">Marcar como concluída</string>
    <string name="edit_text_desc">Descrição</string>
    <string name="text_view_data_edit">Escolha uma data</string>
    <string name="text_view_hora_edit">Escolha um horário</string>
    <string name="text_view_dat_edit">Data</string>
    <string name="text_view_hor_edit">Hora</string>
    <string name="text_view_edit">Editar tarefa</string>
    <string name="text_view_test">aaa</string>
    <string name="text_view_repeti">Não repetir</string>
    <string name="edit_text_tit">Titulo</string>


    <!---Strings activity_item_selected_agenda_concluido -->
    <string name="text_view_conc">Tarefa concluída nº</string>
    <string name="edit_text_desco">Descrição</string>
    <string name="text_view_criado">Criado em:</string>
    <string name="text_view_conc2">Concluído em:</string>

    <!---Strings activity_config -->
    <string name="text_view_linear_perfil">Meu Perfil</string>
    <string name="text_view_linear_segura">Segurança e Privacidade</string>
    <string name="text_view_linear_not">Notificações</string>
    <string name="text_view_liner_sobre">Sobre</string>
    <string name="text_view_liner_aparencia">Aparência</string>
    <string name="text_view_linear_paineladm">Painel Admin</string>


    <!---Strings activity_config_perfil -->
    <string name="text_view_nome_completo">Fernando Macoache Rabelo Trindade</string>
    <string name="text_view_email">E-Mail</string>
    <string name="text_view_sair_conta">Sair da Conta</string>
    <string name="text_view_nome_completo2">Nome Completo</string>
    <string name="text_view_nome_completo3">Alterar Nome</string>


    <!---Strings Canal de notificação -->
    <string name="default_notification_channel_id">channel_id</string>
    <string name="default_notification_channel_name">Notifications</string>

    <!---Strings activity_sec_priv -->
    <string name="text_view_sec">Privacidade e Segurança</string>
    <string name="text_view_sec_senha">Senha</string>
    <string name="text_view_sec_biometria">Biometria</string>
    <string name="text_view_sec_permissao">Permissões</string>

    <!---Strings activity_sec_fingerprint -->
    <string name="text_view_sec_fing">Biometria</string>
    <string name="text_view_sec_fing_biome">Solicitar impressão digital ao abrir o aplicativo</string>

    <!---Strings activity_sec_permissao -->
    <string name="text_view_sec_perm">Permissões</string>
    <string name="text_view_sec_perm_permi">Acesso a fotos e mídias</string>
    <string name="text_view_sec_perm_permi2">Acesso total a todos os arquivos</string>

    <!---Strings activity_confg_sobre -->
    <string name="text_view_confg_sobre">Sobre</string>
    <string name="text_view_confg_sobre_att">Verificar por atualizações</string>
    <string name="text_view_confg_sobre_versao">Versão</string>
    <string name="text_view_confg_sobre_att_auto">Atualizar automaticamente</string>

    <!---Strings activity_confg_notificacao -->
    <string name="text_view_confg_not_tit">Notificações</string>
    <string name="text_view_confg_not_silenc">Silenciar notificações</string>

    <!---Strings activity_confg_aparencia -->
    <string name="text_view_confg_aparencia">Aparência</string>
    <string name="text_view_confg_aparencia_alternar">Tema</string>

    <!---Strings activity_confg_perfil_email-->
    <string name="text_view_confg_perfil_mail">E-mail</string>

    <!---Strings activity_confg_sec_senha-->
    <string name="text_view_confg_sec_senha">Alterar Senha</string>
    <string name="text_view_confg_sec_senha2">Senha Antiga</string>
    <string name="text_view_confg_sec_senha3">Senha Nova</string>
    <string name="text_view_confg_sec_senha4">Repetir Nova Senha</string>

</resources>