<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundThemeRepeatReminder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    >


    <RadioGroup
        android:layout_width="300dp"
        android:id="@+id/RadioGroup"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RadioButton
            android:id="@+id/radioNaoRepetir"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_view_nao_repetir"
            android:fontFamily="@font/ptsans_regular"
            />

        <RadioButton
            android:id="@+id/radioTododia"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_dia"
            android:fontFamily="@font/ptsans_regular"
            />
        <RadioButton
            android:id="@+id/radioTodaSemana"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_semana"
            android:fontFamily="@font/ptsans_regular"
            />

        <RadioButton
            android:id="@+id/radioTodoMes"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_mes"
            android:fontFamily="@font/ptsans_regular"
            />

        <RadioButton
            android:id="@+id/radioTodoAno"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_ano"
            android:fontFamily="@font/ptsans_regular"
            />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>