<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundThemeAddAgenda2"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:fontFamily="@font/ptsans_regular"
        android:hint="@string/edit_text_nome_add_agenda"
        android:inputType="textImeMultiLine"
        android:maxLength="14"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#464646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/ptsans_regular"
        android:hint="@string/edit_text_descricao_add_agenda"
        android:imeOptions="actionSend"
        android:importantForAutofill="no"
        android:inputType="textImeMultiLine"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#464646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/button_login"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/button_send_svg"
        app:fabCustomSize="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextColorAddAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ptsans_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/text_view_horario"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/baseline_schedule_24"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextColorAddAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ptsans_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/text_view_data"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/baseline_calendar_month_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        >

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" /> <!-- Defina checked conforme necessário -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            style="@style/TextColorAddAgenda"
            android:text="@string/switch_button"
            android:fontFamily="@font/ptsans_bold"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_contador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_contador_titulo"
        android:textColor="#464646"
        android:fontFamily="@font/ptsans_regular"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_contador_descricao"
        android:textColor="#464646"
        android:fontFamily="@font/ptsans_regular"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toTopOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textViewRepetirLembrete"
        style="@style/TextColorAddAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:drawablePadding="2dp"
        android:focusable="true"
        android:fontFamily="@font/ptsans_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/text_view_repetir"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/refresh_icon"
        app:drawableRightCompat="@drawable/down_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />


</androidx.constraintlayout.widget.ConstraintLayout>