<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundThemeRepeatReminder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    >


    <RadioGroup
        android:layout_width="300dp"
        android:id="@+id/RadioGroup"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RadioButton
            android:id="@+id/radioAuto"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_view_theme_automatico"
            android:fontFamily="@font/ptsans_regular"
            />

        <RadioButton
            android:id="@+id/radioEscuro"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_theme_dark"
            android:fontFamily="@font/ptsans_regular"
            />
        <RadioButton
            android:id="@+id/radioClaro"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_theme_light"
            android:fontFamily="@font/ptsans_regular"
            />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>