<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardView"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="20dp"
    style="@style/BackGroundTintThemeItens"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/button_add_agenda_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </ImageView>


        <TextView
            android:id="@+id/text_view_titulo_agenda2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/text_view_titulo"
            android:textSize="15sp"
            android:fontFamily="@font/ptsans_bold"
            android:theme="@style/AppTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_data_agenda2"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="70dp"
            android:drawablePadding="7sp"
            android:text="@string/text_view_hor"
            android:fontFamily="@font/ptsans_regular"
            android:textSize="12sp"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/baseline_calendar_month_24" />




        <TextView
            android:id="@+id/text_view_descricao_agenda2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/text_view_desc"
            android:textSize="15sp"
            android:fontFamily="@font/ptsans_regular"
            android:theme="@style/AppTheme2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_titulo_agenda2" />

        <TextView
            android:id="@+id/text_view_hora_agenda2"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:drawablePadding="7sp"
            android:text="@string/text_view_hor"
            android:textSize="12sp"
            android:fontFamily="@font/ptsans_regular"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_data_agenda2"
            app:drawableLeftCompat="@drawable/baseline_calendar_month_24_green" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>